--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -12,6 +12,9 @@ h1, h2 {
   font-weight: 600;
 }
 
+a{
+    color: #000;
+}
 .card {
   background-color: #fff;
   border: 1px solid #dee2e6;
@@ -30,6 +33,7 @@ h1, h2 {
 .card-title {
   font-weight: 600;
   font-size: 1.1rem;
+  color: #000;
 }
 
 .card-footer {
