--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,7 +15,7 @@
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/weather-icons/2.0.10/css/weather-icons.min.css">
 
-		<link rel="stylesheet" href="{{ asset('styles/app.css') }}"> {% block javascripts %}
+		<link rel="stylesheet" href="{{ asset('app.css') }}"> {% block javascripts %}
 		
 		{% endblock %}
 	</head>
