--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,8 +14,9 @@
 		 <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-annotation@1.4.0/dist/chartjs-plugin-annotation.min.js"></script>
 
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/weather-icons/2.0.10/css/weather-icons.min.css"> 
+		
 		<link rel="stylesheet" href="{{ asset('app.css') }}"> {% block javascripts %}{% endblock %}
 		</head>
-		<body data-controller="register-chart-plugins"> {% block body %}{% endblock %}
+		<body> {% block body %}{% endblock %}
 			</body>
 		</html>
