--- a/templates/meteo.html.twig
+++ b/templates/meteo.html.twig
@@ -23,15 +23,18 @@
 		<div class="text-center my-4" id="filter-bar">
 			<button class="filter-btn active" data-target="all">Tous</button>
 			{% for source in sources %}
+			  {% if source.enabled %}
 				{% set provider = source.provider %}
 				<button class="filter-btn my-2" data-target="provider-{{ loop.index }}" style="--color: {{ colors[provider].border }}">
 					{{ provider }}
 				</button>
+				{% endif %}
 			{% endfor %}
 		</div>
 
 		<div class="row justify-content-center" id="cards-container">
 			{% for source in sources %}
+			  {% if source.enabled %}
 				{% set provider = source.provider %}
 				<div class="col-12 col-md-6 provider-card mt-3 provider-{{ loop.index }}">
 					<div class="card h-100 d-flex flex-column justify-content-between my-4">
@@ -83,6 +86,7 @@
 						</div>
 					</div>
 				</div>
+				{% endif %}
 			{% endfor %}
 		</div>
 
