change CityCoordinates to LocationCoordinateInterface

--- a/templates/meteo.html.twig
+++ b/templates/meteo.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
 	<section class="container my-4">
 		<h1 class="mb-1">Météo à
-			{{ ville }}</h1>
+			{{ location.name }}</h1>
 		<h2 class="mb-3">{{ infosDay.date }}</h2>
 		<p class="text-center mb-4 text-muted">Lever
 			{{ infosDay.ephemeride.sunrise }}
