--- a/templates/meteo.html.twig
+++ b/templates/meteo.html.twig
@@ -20,6 +20,7 @@
     'OpenWeather': { border: '#FFD180', background: 'rgba(255, 209, 128, 0.1)' },
     'WeatherAPI': { border: '#C5E1A5', background: 'rgba(197, 225, 165, 0.1)' },
     'Météo-France': { border: '#BCAAE6', background: 'rgba(188, 170, 230, 0.1)' },
+    'wttr.in': { border: '#66CCFF', background: 'rgba(102, 204, 255, 0.1)' },
   } %}
 
 		<div class="text-center my-4" id="filter-bar">
